tests/NormalTests/paczka1/fuzzy1/42435683.err
Error in line 1: FHSvDZXu0 S752 41,5
Error in line 2: cpas S752 57,3
Error in line 13: mLL9 S442 79,1
Error in line 3: FHSvDZXu0 S442 25,9
Error in line 14: mLL9 S103 35,4
Error in line 26: Kf40Ks S442 98,1
Error in line 29: cpas S442 18,5
Error in line 35: Kf40Ks S442 71,71
